--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,44 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.3.4.RELEASE</version>
+		<relativePath />
+		<!-- lookup parent from repository -->
+	</parent>
 
-    <groupId>com.anz.eventmesh.streams</groupId>
-    <artifactId>parent</artifactId>
-    <packaging>pom</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+	<groupId>com.anz.eventmesh.streams</groupId>
+	<artifactId>parent</artifactId>
+	<packaging>pom</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 
-    <repositories>
+	<repositories>
 		<repository>
 			<id>confluent</id>
-			<url>https://packages.confluent.io/maven/</url>
+			<url>https://artifactory.gcp.anz/artifactory/maven-confluent</url>
+		</repository>
+		<repository>
+			<id>central</id>
+			<url>https://artifactory.gcp.anz/artifactory/maven-central</url>
 		</repository>
 	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
 			<id>confluent</id>
-			<url>https://packages.confluent.io/maven/</url>
+			<url>https://artifactory.gcp.anz/artifactory/maven-confluent</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>central</id>
+			<url>https://artifactory.gcp.anz/artifactory/maven-central</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<properties>
 		<java.version>1.8</java.version>
-		<confluent.version>5.5.1</confluent.version>
-		<kafka.version>5.5.1-ccs</kafka.version>
+		<confluent.version>5.5.2</confluent.version>
+		<kafka.version>5.5.2-ccs</kafka.version>
 		<avro.version>1.9.1</avro.version>
 	</properties>
 	<dependencies>
@@ -60,7 +70,7 @@
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
 			<version>1.3.0</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
@@ -84,6 +94,13 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.30</version>
+			<exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -120,12 +137,12 @@
 			<artifactId>kafka-schema-registry-client</artifactId>
 			<version>${confluent.version}</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>io.confluent</groupId>
 			<artifactId>kafka-schema-registry</artifactId>
 			<version>${confluent.version}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-streams-test-utils</artifactId>
@@ -136,7 +153,7 @@
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>2.11.2</version>
-		  </dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
